# smelte-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README.tpl  build.rs
.github/workflows/: rust.yaml
benches/: normalize.rs  ops.rs  softmax.rs
examples/: bert.rs  bert_gpu.rs  gpt2.rs  santacoder.rs  santacoder_gpu.rs
src/: lib.rs  ops.rs  tensor.rs  traits.rs
src/cpu/: mod.rs
src/cpu/f16/: mod.rs  ops.rs  tensor.rs
src/cpu/f32/: mod.rs  ops.rs  tensor.rs  traits.rs
src/gpu/: mod.rs
src/gpu/f32/: mod.rs  ops.rs  tensor.rs  traits.rs
src/gpu/f32/kernels/: add.cu  binary_op_macros.cuh  normalize.cu  softmax.cu  unitary.cu
src/nn/: layers.rs  mod.rs
src/nn/layers/: embedding.rs  layer_norm.rs  linear.rs  mod.rs
src/nn/models/: bert.rs  bert_reshape.cu  gpt2.rs  gpt2_reshape.cu  mod.rs
