[package]
name = "smelte-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas-sys = { version = "0.1.4", default-features = false, optional = true }
matrixmultiply = { version = "0.3.2", default-features = false, optional = true }
half = {version = "2.2.1", features=["num-traits"], optional=true}
libc = { version = "0.2", default-features = false }
num-traits = { version = "0.2.15", optional=true}

[dev-dependencies]
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
safetensors = "0.3"
thiserror = "1.0"
memmap2 = "0.5"
tokenizers = { git = "https://github.com/huggingface/tokenizers", branch="main", default-features=false, features=["onig"] }

[features]
default = ["cblas"]
cblas = ["cblas-sys"]
intel-mkl = ["cblas"]
f16 = ["dep:half", "dep:num-traits"]
matrixmultiply = ["matrixmultiply/threading"]


[[example]]
name = "bert"
