[package]
name = "smelte-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Efficient inference ML framework written in rust"
homepage = "https://github.com/Narsil/smelte-rs"
documentation = "https://docs.rs/smelte-rs"
repository = "https://github.com/Narsil/smelte-rs"
readme = "README.md"

keywords = [
    "deep-learning",
    "neural-network",
    "tensor",
    "cpu",
    "gpu"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas-sys = { version = "0.1.4", default-features = false, optional = true }
matrixmultiply = { version = "0.3.2", default-features = false, optional = true }
libc = { version = "0.2", default-features = false }
cudarc = { git = "https://github.com/Narsil/cudarc.git", optional = true, default-features=false, features=["driver", "cublas"] }

[dev-dependencies]
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
safetensors = "0.3"
thiserror = "1.0"
memmap2 = "0.5"
tokenizers = { git = "https://github.com/huggingface/tokenizers", branch="main", default-features=false, features=["onig"] }

[build-dependencies]
glob = { version = "0.3.1", optional = true }

[features]
default = []
cblas = ["dep:cblas-sys"]
intel-mkl = ["dep:cblas-sys"]
matrixmultiply = ["matrixmultiply/threading"]
cuda = ["dep:cudarc", "dep:glob"]


[[example]]
name = "bert"

[[example]]
name = "bert_gpu"
required-features = ["cuda"]
